three-tiers-network-cdk/cloudformation/ThreeTiersNetworkCdkStack.template.json
{
 "Resources": {
  "MainVpc919A5E7E": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "main-vpc"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/Resource"
   }
  },
  "MainVpcPublicSubnet1Subnet269349B1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/Subnet"
   }
  },
  "MainVpcPublicSubnet1RouteTableB35CB547": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/RouteTable"
   }
  },
  "MainVpcPublicSubnet1RouteTableAssociation12179C27": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
    },
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet1Subnet269349B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MainVpcPublicSubnet1DefaultRouteA089B896": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "DependsOn": [
    "MainVpcVPCGWBA74F963"
   ],
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "MainVpcPublicSubnet1EIP33B08611": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/EIP"
   }
  },
  "MainVpcPublicSubnet1NATGatewayEEC1F6AE": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet1Subnet269349B1"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MainVpcPublicSubnet1EIP33B08611",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet1/NATGateway"
   }
  },
  "MainVpcPublicSubnet2Subnet287D062B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2/Subnet"
   }
  },
  "MainVpcPublicSubnet2RouteTableE69B5772": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2/RouteTable"
   }
  },
  "MainVpcPublicSubnet2RouteTableAssociationDA7BB36E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
    },
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet2Subnet287D062B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MainVpcPublicSubnet2DefaultRoute3AE7286A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "DependsOn": [
    "MainVpcVPCGWBA74F963"
   ],
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "MainVpcPrivateSubnet1SubnetA8D0757B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.2.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1/Subnet"
   }
  },
  "MainVpcPrivateSubnet1RouteTable9385ABF4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1/RouteTable"
   }
  },
  "MainVpcPrivateSubnet1RouteTableAssociation628BDBF6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
    },
    "SubnetId": {
     "Ref": "MainVpcPrivateSubnet1SubnetA8D0757B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MainVpcPrivateSubnet1DefaultRoute7A3E1735": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MainVpcPublicSubnet1NATGatewayEEC1F6AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "MainVpcPrivateSubnet2SubnetFC4F66C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.2.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2/Subnet"
   }
  },
  "MainVpcPrivateSubnet2RouteTable8E0D12CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2/RouteTable"
   }
  },
  "MainVpcPrivateSubnet2RouteTableAssociationE83CB470": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
    },
    "SubnetId": {
     "Ref": "MainVpcPrivateSubnet2SubnetFC4F66C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MainVpcPrivateSubnet2DefaultRoute986F5D29": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MainVpcPublicSubnet1NATGatewayEEC1F6AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "MainVpcIGW53625DB6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "main-vpc"
     },
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/IGW"
   }
  },
  "MainVpcVPCGWBA74F963": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "InternetGatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/VPCGW"
   }
  },
  "MainVpcS35C084C4F": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "RouteTableIds": [
     {
      "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
     },
     {
      "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
     },
     {
      "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
     },
     {
      "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
     }
    ],
    "VpcEndpointType": "Gateway"
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/MainVpc/S3/Resource"
   }
  },
  "WebTierSecurityGroupC6AAA4C0": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for web server",
    "GroupName": "web-tier-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow SSH access from anywhere",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow HTTP traffic from anywhere on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "Tags": [
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/WebTierSecurityGroup/Resource"
   }
  },
  "AppTierSecurityGroupEDEC7923": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for app server",
    "GroupName": "app-tier-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/AppTierSecurityGroup/Resource"
   }
  },
  "AppTierSecurityGroupfromThreeTiersNetworkCdkStackWebTierSecurityGroup11506B5DALLTRAFFIC192D5873": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "-1",
    "Description": "allow all traffic from web-tier-sg",
    "GroupId": {
     "Fn::GetAtt": [
      "AppTierSecurityGroupEDEC7923",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "WebTierSecurityGroupC6AAA4C0",
      "GroupId"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/AppTierSecurityGroup/from ThreeTiersNetworkCdkStackWebTierSecurityGroup11506B5D:ALL TRAFFIC"
   }
  },
  "DatabaseTierSecurityGroup282AA341": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for database",
    "GroupName": "db-tier-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Project",
      "Value": "three-tiers-network-cdk"
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/DatabaseTierSecurityGroup/Resource"
   }
  },
  "DatabaseTierSecurityGroupfromThreeTiersNetworkCdkStackAppTierSecurityGroupCCB9A03733061E3D5065": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "allow traffic on port 3306 from app-tier-sg",
    "FromPort": 3306,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseTierSecurityGroup282AA341",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AppTierSecurityGroupEDEC7923",
      "GroupId"
     ]
    },
    "ToPort": 3306
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/DatabaseTierSecurityGroup/from ThreeTiersNetworkCdkStackAppTierSecurityGroupCCB9A037:3306"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32QTQvCMAyGf4v3rn7jWURkFxmbeJWuixrd0tGmExH/u51Od/OUJw8v4SUTOZ3L0UDdXKSLa1RiLh8ZK30VQR1AT+RjX2uxOtI+WYnE5yXqzOcE3LqeUuMZdiovofe9WzpnNCpGQ79wC+s4acdW8UYx3NRdJBabgP3hmBhs4G/g06TblhyqnisgFp0JZddU1AaJu+hvzUB7i3zfWOPrd8u/IqaTBeeeIgVnvNXvwl9+CjIFyIsbNuOZHC/CCy8OMbKeGCuQ6We+AAS7s/xeAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "ThreeTiersNetworkCdkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
